# Assignment3

Data Scrape Stream/: .gitignore  README.md  pyproject.toml  requirements.txt  test.py
Data Scrape Stream/Airflow/: Dockerfile  docker-compose.yaml
Data Scrape Stream/Airflow/dags/: scrape_S3.py  scrape_snowflake.py
Data Scrape Stream/Api/: document_processors.py  jwtauth.py  main.py  pinecone_utils.py  rag_model.py  report_generator.py  summarizer_model.py
Data Scrape Stream/Streamlit/: application.py  main.py
Data Scrape Stream/storage_nodes_summary/: index_store.json
